--- a/style/quarto-asa.scss
+++ b/style/quarto-asa.scss
@@ -1,6 +1,6 @@
 /*-- scss:defaults --*/
 
-@import 'https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap';
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap');
 
 $font-family: "Atkinson Hyperlegible", sans-serif;
 $link-color: #58779b;
